# USBProxy

src/Plugins/Devices/: CMakeLists.txt
src/Plugins/Hosts/: GadgetFS_helpers.c
src/Plugins/Injectors/: CMakeLists.txt  Injector_EvDev.cpp  Injector_EvDev.h
src/bindings/python/: CMakeLists.txt  UDPKeyboard.py  USBKeyboard.py  keymap.py  usbproxy-udp-keyboard.py
src/cmake/modules/: FindUSB1.cmake
src/lib/: CMakeLists.txt  Manager.cpp  Manager.h
src/tools/: CMakeLists.txt  buttonsme  evdev-usb-bridge.c  evtest.py  inject-reset-button  loopbacktest  send-a-udp  timerinputme.c  uinputme.c  write-loopbacktest
